# stream-chrono

./: .gitignore  LICENSE  README.md  app.py  config.ini  main.py  noxfile.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-app.yml  python-package.yml
chrono-streamer/: audio_processor.py
chronostreamer/: __main__.py  audio_processor.py  sync_manager.py  thread_manager.py  utils.py
chronostreamer/control/: system_control.py
chronostreamer/web/: web_interface.py
src/chrono-streamer/: sync_manager.py
tests/: test_audio_processor.py  test_sync_manager.py  test_utils.py
