[metadata]
name=chronostreamer
version=0.0.1
description=A client for audio processing, streaming, and recording
author=Daniel Kigen Buturu
author_email=dbuturu@gmail.com
license=MIT
license_file=LICENSE
classifiers=
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
  ffmpeg-python
